[package]
name = "hashcode2019"
version = "0.0.1"
authors = [ "Marlon Baeten marlon@tweedegolf.com", "Wouter Geraedts <wouter@tweedegolf.com>" ]
edition = "2018"

[dependencies.ndarray]
version = "0.12.1"
features = ["blas"]

[dependencies]
rand = "0.6.5"
itertools = "0.8.0"
indexmap = "1.0.2"
num-traits = "0.2.6"